Fixed brand spacing

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -51,8 +51,9 @@ body {
 }
 
 .brand {
-	font-size: 50px;
+	font-size: 55px;
 	margin: 0;
+	padding-bottom: 15px;
 }
 
 .volume {
